finalizado endPoints do voucher para swagger 3.0.3
