# src/main/java/com/rematec/voucher/voucherbackapi/models/requests/Guid.java
@@ -1,16 +1,0 @@
-package com.rematec.voucher.voucherbackapi.models.requests;
-
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-import lombok.experimental.SuperBuilder;
-
-@Getter
-@Setter
-@SuperBuilder
-@AllArgsConstructor
-@NoArgsConstructor
-public class Guid {
-    private String guid;
-}
