# src/main/java/com/rematec/voucher/voucherbackapi/models/response/VoucherPromocaoResponse.java
@@ -1,22 +1,0 @@
-package com.rematec.voucher.voucherbackapi.models.response;
-
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-
-import java.math.BigDecimal;
-
-@Getter
-@Setter
-@Builder
-@NoArgsConstructor
-@AllArgsConstructor
-public class VoucherPromocaoResponse {
-    private String status;
-    private String transacao;
-    private String descricao;
-    private BigDecimal valorDesconto;
-
-}
